--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header__img {
   width: 100%;
 }
-.header, .more-inf {
+.header, .header__info {
   font-family: fantasy, cursive;
 }
 
@@ -22,7 +22,7 @@ body {
   text-align: center;
 }
 }
-.main-wrapper {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -32,14 +32,14 @@ body {
   display: inline-block;
   flex-grow: 1
 }
-.task-row-wrapper {
+.add-task__wrapper {
   display: flex;
 }
-ul {
+.list {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.list-elem, .subtitle {
   list-style:none;
 }
 input,button{
@@ -58,8 +58,7 @@ button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.subtitle {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -94,7 +93,7 @@ input#new-task {
 }
 
 /* Task list */
-li {
+.list-elem {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -102,7 +101,7 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list-elem {
   vertical-align: middle;
 }
 
@@ -138,11 +137,11 @@ ul li input[type="text"] {
   display:none
 }
 
-ul li.edit-mode input[type="text"] {
+.list-elem_edit-mode input[type="text"] {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.list-elem_edit-mode label {
   display:none;
 }
